--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 /__pycache__/*
+/excel/__pycache__/*
 /database/__pycache__/*
 /documents/excel_file.xlsx
 *.db
@@ -6,7 +7,7 @@ config.py
 *.txt
 *.xlsx
 *.xls
-test_db.py
+testing/test_db.py
 test_lessons.py
 telegram_bot.db
 /documents/*
