--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,11 @@
 /__pycache__/*
 /excel/__pycache__/*
 /database/__pycache__/*
-/documents/excel_file.xlsx
 *.db
 config.py
 *.txt
 *.xlsx
 *.xls
-testing/test_db.py
-test_lessons.py
-testing/test_session.py
-testing/*`
-telegram_bot.db
+testing/*
 /documents/*
-/documents/
-documents/
-/documents
-/documents/
-documents/*
 /excel/__pycache__/*
