--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,15 @@
-/__pycache__/*
-/excel/__pycache__/*
-/database/__pycache__/*
-*.db
-config.py
-*.txt
-*.xlsx
-*.xls
-testing/*
-/documents/*
 .idea/misc.xml
 .idea/modules.xml
 .idea/nupp_bot.iml
 .idea/vcs.xml
 .idea/inspectionProfiles/profiles_settings.xml
+config.py
+*.db
+*.txt
+*.xlsx
+*.xls
+/__pycache__/*
+/excel/__pycache__/*
+/database/__pycache__/*
+/testing/*
+/documents/*
